# MediaIPC

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
examples/common/: common.cpp  common.h
examples/consumers/: ffmpeg_consumer.cpp  ffmpeg_streaming_consumer.cpp  rawdump_consumer.cpp
examples/producers/: procedural_producer.cpp
source/private/: ConsumerDelegate.cpp  ControlBlock.cpp  Formats.cpp  IPCUtils.cpp  IPCUtils.h  MediaConsumer.cpp  MediaProducer.cpp  MemoryUtils.h  ObjectNames.cpp  ObjectNames.h  RingBuffer.cpp  RingBuffer.h
source/public/: AudioFormats.inc  ConsumerDelegate.h  ControlBlock.h  Formats.h  MediaBase.h  MediaConsumer.h  MediaProducer.h  VideoFormats.inc
